@@ -1,7 +1,7 @@
 {% extends 'creme_core/popup-base.html' %}
 {% load creme_ctype %}
 
-{% block ipopup_extra_class %}is-listview-popup {% ctype_for_model model as ctype %}listview-popup-{{ctype.app_label}}-{{ctype.model}}{% endblock %}
+{% block ipopup_extra_class %}is-listview-popup {% with ctype=model|ctype_for_instance %}listview-popup-{{ctype.app_label}}-{{ctype.model}}{% endwith %}{% endblock %}
 
 {% block content %}
     {% include content_template %}
