@@ -7,28 +7,28 @@
         <select name="filter" class="lv-state-field list-filters-selector">
             <option value="">{% translate 'All' context 'creme_core-filter' %}</option>
             {% for efilter in entity_filters %}
-                <option value="{{efilter.id}}"{% if efilter_id == efilter.id %} selected{% endif %}>{{efilter}}</option>
+             <option value="{{efilter.id}}"{% if efilter_id == efilter.id %} selected{% endif %}>{{efilter}}</option>
             {% endfor %}
         </select>
         <div class="select-arrow"></div>
     </div>
-{% with efilter=entity_filters.selected %}
+{% with efilter=entity_filters.selected ctype=model|ctype_for_instance %}
     {% if efilter_id %}
-        <a data-action="popover">
-            {% widget_icon name='info' label=_('Information on the current filter') size='listview-filter-action' %}
-            {% include 'creme_core/frags/entity-filter-summary.html' with efilter=efilter user=user %}
-        </a>
+      <a data-action="popover">
+          {% widget_icon name='info' label=_('Information on the current filter') size='listview-filter-action' %}
+          {% include 'creme_core/frags/entity-filter-summary.html' with efilter=efilter user=user %}
+      </a>
     {% endif %}
-    {% if show_buttons %}{% ctype_for_model model as ctype %}
-        <a href="{% url 'creme_core__create_efilter' ctype.id %}">
-            {% widget_icon name='add' label=_('Create a custom filter') size='listview-filter-action' %}
-        </a>
-        <a href="{{efilter.get_edit_absolute_url}}" data-action="redirect" class="{% if not can_edit %}is-disabled{% endif %}">
-            {% widget_icon name='edit' label=_('Edit this filter') size='listview-filter-action' %}
-        </a>
-        <a href="{{efilter.get_delete_absolute_url}}" data-action="delete" class="{% if not can_delete %}is-disabled{% endif %}">
-            {% widget_icon name='delete' label=_('Delete this custom filter') size='listview-filter-action' %}
-        </a>
+    {% if show_buttons %}
+      <a href="{% url 'creme_core__create_efilter' ctype.id %}">
+          {% widget_icon name='add' label=_('Create a custom filter') size='listview-filter-action' %}
+      </a>
+      <a href="{{efilter.get_edit_absolute_url}}" data-action="redirect" class="{% if not can_edit %}is-disabled{% endif %}">
+          {% widget_icon name='edit' label=_('Edit this filter') size='listview-filter-action' %}
+      </a>
+      <a href="{{efilter.get_delete_absolute_url}}" data-action="delete" class="{% if not can_delete %}is-disabled{% endif %}">
+          {% widget_icon name='delete' label=_('Delete this custom filter') size='listview-filter-action' %}
+      </a>
     {% endif %}
 {% endwith %}
 </fieldset>
